sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var n:Int=getNombreValeurs()
  var i:Int=0
  var compteur:Int=0
  while (compteur <(n-1)){
    while (i<(n-1)){
      if (!plusPetit(i,i+1))
      echange(i,i+1)
      i=i+1
      compteur=0
    } else{
      i=i+1
      compteur=compteur+1
    }
  }
}